edit media breakpoints, fine tune grid responsiveness to make sure nothing gets cut off

--- a/src/App.css
+++ b/src/App.css
@@ -247,15 +247,15 @@
   font-weight: bold;
   transition: transform 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.6),
-    /* Main deep shadow for depth */ inset 0px 3px 8px rgba(255, 255, 255, 0.7),
-    /* Inner highlight at top */ inset 0px -4px 8px rgba(0, 0, 0, 0.4); /* Bottom shadow for depth */
+    inset 0px 3px 8px rgba(255, 255, 255, 0.7),
+    inset 0px -4px 8px rgba(0, 0, 0, 0.4);
 }
 
 .grid-square:hover {
   transform: translateY(-5px);
   box-shadow: 0px 12px 24px rgba(0, 0, 0, 0.65),
-    /* Deepened shadow */ inset 0px 4px 10px rgba(255, 255, 255, 0.75),
-    /* Brightened highlight */ inset 0px -5px 10px rgba(0, 0, 0, 0.45);
+    inset 0px 4px 10px rgba(255, 255, 255, 0.75),
+    inset 0px -5px 10px rgba(0, 0, 0, 0.45);
 }
 
 .grid-square:active {
@@ -263,77 +263,68 @@
   box-shadow: inset 0px 3px 5px rgba(0, 0, 0, 0.5);
 }
 
-@media (min-width: 300px) {
+@media (min-width: 320px) {
+  .header-title {
+    font-size: 1.5rem;
+  }
+
   .grid-container {
     width: 70vw;
-    padding: 0.5vw;
+    padding: 5vw;
   }
 
   .grid-square {
     height: 11vw;
     width: 17vw;
     font-size: 3vw;
+    padding: 1vw;
   }
 }
 
-@media (min-width: 480px) {
+@media (min-width: 601px) {
   .grid-container {
-    width: 95vw;
+    width: 75vw;
     padding: 2vw;
   }
 
   .grid-square {
-    height: 10vw;
-    width: 14vw;
-    font-size: 3vw;
+    height: 8vw;
+    width: 12vw;
+    font-size: 2.5vw;
   }
 }
 
-@media (min-width: 768px) {
-  .header {
-    padding: 4rem 5rem;
-  }
-
-  .header-title {
-    font-size: 12rem;
+@media (min-width: 1025px) {
+  .question-container {
+    margin-top: 0.3em;
   }
 
   .grid-container {
-    width: 70vw;
-    padding: 0.7vw;
+    width: 80vw;
+    height: 60vh;
+    padding: 0.5vw;
+    margin-top: 0.7em;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(11vw, 1fr));
+    gap: 0.5em;
   }
 
   .grid-square {
     height: 5vw;
-    width: 9vw;
-    font-size: 3.8vw;
-    margin: 1em 1em;
+    width: 11vw;
+    font-size: 2vw;
   }
 
   .btns-container {
-    gap: 2em;
-    margin-top: 1em;
+    gap: 1em;
+    margin-top: 0.7em;
   }
 
   .btn {
-    padding: 5px;
-    width: 20em;
+    padding: 1px;
+    width: 10em;
     height: 2em;
-    font-size: 4em;
-  }
-
-  .question-container {
-    width: 50vw;
-    height: 9vh;
-    border-radius: 40px;
-    margin-top: 5em;
-    padding: 1em;
-  }
-
-  .english-word,
-  .pinyin-word {
-    margin: 1em 0;
-    font-size: 4em;
+    font-size: 2em;
   }
 }
 
